tests/neg-macros/i22616.check
-- [E219] Staging Issue Error: tests/neg-macros/i22616.scala:13:22 -----------------------------------------------------
13 |          case '{ new caseName(${ Expr(name) }) } => Some(caseName(name))  // error // error
   |                      ^^^^^^^^
   |                  Quoted pattern type variable `caseName` cannot be instantiated.
   |                  If you meant to refer to a class named `caseName`, wrap it in backticks.
   |                  If you meant to introduce a binding, this is not allowed after `new`. You might
   |                  want to use the lower-level `quotes.reflect` API instead.
   |                  Read more about type variables in quoted pattern in the Scala documentation:
   |                  https://docs.scala-lang.org/scala3/guides/macros/quotes.html#type-variables-in-quoted-patterns
   |                      
-- [E006] Not Found Error: tests/neg-macros/i22616.scala:13:67 ---------------------------------------------------------
13 |          case '{ new caseName(${ Expr(name) }) } => Some(caseName(name))  // error // error
   |                                                                   ^^^^
   |                                                                   Not found: name
   |
   | longer explanation available when compiling with `-explain`
